--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
-    "jquery": "^1.12.0",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
@@ -54,11 +53,11 @@
     "react-day-picker": "9.13.2",
     "react-dom": "19.2.4",
     "react-hook-form": "^7.54.1",
+    "react-pageflip": "^2.0.3",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^3.3.1",
-    "turn.js": "^1.0.5",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
@@ -71,5 +70,10 @@
     "tailwindcss": "^4.2.0",
     "tw-animate-css": "1.3.3",
     "typescript": "5.7.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "turn.js>jquery": "^1.12.0"
+    }
   }
 }
